test: refactor reusable fixtures across suites